--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
@@ -23,7 +24,8 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview-bridge": "^0.40.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
