--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
+    "@use-expo/font": "^2.0.0",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-app-loading": "^1.3.0",
     "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
