--- a/package.json
+++ b/package.json
@@ -10,26 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.3.1",
     "react-native": "^0.64.3",
     "react-native-app-link": "^1.0.1",
     "react-native-canvas": "^0.1.38",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.17.2",
+    "react-native-webview": "11.15.0",
     "react-native-webview-bridge": "^0.40.1"
   },
   "devDependencies": {
