--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@benjeau/react-native-draw": "^0.8.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
     "react-native-webview-bridge": "^0.40.1"
