add name & number input for hotlines

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-app-link": "^1.0.1",
     "react-native-canvas": "^0.1.38",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-mmkv": "^2.3.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
